--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ matrix:
 
 script: ./gradlew check --info --stacktrace --console=plain --max-workers=1 --no-daemon -Dkotlin.compiler.execution.strategy="in-process" -Dkotlin.colors.enabled=false
 
+after_success:
+  - ./gradlew cobertura coveralls
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
