--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,13 @@ repositories {
     mavenCentral()
 }
 
+plugins {
+    id 'net.saliman.cobertura' version '2.3.1'
+    id 'com.github.kt3k.coveralls' version '2.8.2'
+}
+
+cobertura.coverageFormats = ['html', 'xml']
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile 'org.assertj:assertj-core:3.9.0'
