--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ repositories {
 
 cobertura.coverageFormats = ['html', 'xml']
 
+tasks.coveralls {
+    dependsOn 'check'
+}
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile 'org.assertj:assertj-core:3.9.0'
