--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,7 @@ matrix:
       sudo: false
       jdk: openjdk8
 
-script: ./gradlew check jacocoTestReport coveralls --info --stacktrace --console=plain --max-workers=1 --no-daemon -Dkotlin.compiler.execution.strategy="in-process" -Dkotlin.colors.enabled=false
-
-after_success:
-  - ./gradlew jacocoTestReport coveralls
+script: ./gradlew check --info --stacktrace --console=plain --max-workers=1 --no-daemon -Dkotlin.compiler.execution.strategy="in-process" -Dkotlin.colors.enabled=false
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
