commenting out credentials

--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,8 @@ compileTestKotlin {
 }
 
 bintray {
-    user = BINTRAY_USER
-    key = BINTRAY_KEY
+    user = '' //BINTRAY_USER
+    key = '' //BINTRAY_KEY
     publications = ['mavenJava']
 
     pkg {
